[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.9.2,<0.10.0)",
    "pyspark (>=3.5.4,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "grpcio (>=1.69.0,<2.0.0)",
    "grpcio-status (>=1.69.0,<2.0.0)",
    "googleapis-common-protos (>=1.66.0,<2.0.0)",
    "setuptools (>=75.8.0,<76.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
